[gd_scene load_steps=10 format=3 uid="uid://bycw3ydt4rvmd"]

[ext_resource type="Script" uid="uid://dt8afqn1760yr" path="res://Sandboxes/Stella/npc_toplogic.gd" id="1_ntneb"]
[ext_resource type="Script" uid="uid://c2k6d8rqsonv3" path="res://Sandboxes/Stella/state_machine.gd" id="2_knyxn"]
[ext_resource type="Script" uid="uid://cpnqeyex2aora" path="res://Sandboxes/Stella/HumanExplore.gd" id="2_uafth"]
[ext_resource type="Script" uid="uid://dwq455lenc70t" path="res://Sandboxes/Stella/player_seen.gd" id="3_uafth"]
[ext_resource type="Script" uid="uid://dt0hi6s3tnu0d" path="res://Sandboxes/Stella/npcraycast.gd" id="5_l2wxt"]
[ext_resource type="PackedScene" uid="uid://c1w1trblnec4p" path="res://Scenes/npc_f_actor_01.tscn" id="5_th138"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q3xt4"]
radius = 0.373513

[sub_resource type="BoxShape3D" id="BoxShape3D_th138"]
size = Vector3(15, 10, 20)

[sub_resource type="SphereShape3D" id="SphereShape3D_q3xt4"]
radius = 5.0

[node name="NavNPC" type="CharacterBody3D" node_paths=PackedStringArray("spiderDetector", "lineOfSightRay") groups=["npc"]]
collision_layer = 2
script = ExtResource("1_ntneb")
spiderDetector = NodePath("SpiderDetector")
lineOfSightRay = NodePath("LineOfSight")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0.727592, 0)
shape = SubResource("CapsuleShape3D_q3xt4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.75
path_max_distance = 5.41
avoidance_enabled = true
debug_enabled = true

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "npc_animator")]
script = ExtResource("2_knyxn")
initial_state = NodePath("IdleExplore")
npc_animator = NodePath("../NPC_f")

[node name="IdleExplore" type="Node" parent="State Machine"]
script = ExtResource("2_uafth")

[node name="PlayerSeen" type="Node" parent="State Machine"]
script = ExtResource("3_uafth")

[node name="NPC_f" parent="." instance=ExtResource("5_th138")]

[node name="LineOfSight" type="RayCast3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0, 1.39104, -0.11)
target_position = Vector3(0, 20, 0)
debug_shape_thickness = 5
script = ExtResource("5_l2wxt")

[node name="SpiderDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpiderDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.834, -6.641)
shape = SubResource("BoxShape3D_th138")

[node name="AttackRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13185, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("SphereShape3D_q3xt4")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="target_reached" from="NavigationAgent3D" to="State Machine/IdleExplore" method="_on_navigation_agent_3d_target_reached"]
[connection signal="target_reached" from="NavigationAgent3D" to="State Machine/PlayerSeen" method="_on_navigation_agent_3d_target_reached"]
[connection signal="Transitioned" from="State Machine/IdleExplore" to="NPC_f" method="_on_idle_explore_transitioned"]
[connection signal="Transitioned" from="State Machine/PlayerSeen" to="NPC_f" method="_on_player_seen_transitioned"]
[connection signal="body_entered" from="SpiderDetector" to="." method="DetectSpider"]
[connection signal="body_exited" from="SpiderDetector" to="." method="LoseSpider"]
[connection signal="body_entered" from="AttackRange" to="." method="AttackSpider"]
